welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:9: error: 'while' expected but '(' found.
}(!sortieTrouvee) 
 ^Poucet:11: error: '(' expected but '}' found.
	}
        ^